--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>Destinos</h3>
         <ul>
         <li><a href="rusia.html">Ruisa</a></li>
-        <li><a href="Azerbaiyán.html">Azerbaiyán</a></li>
+        <li><a href="Azerbaiyan.html">Azerbaiyán</a></li>
         <li><a href="bocas.html">**</a></li>
         <li><a href="nosotros.html">Nosotros (Equipo)</a></li>
         </ul>
