--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         <li><a href="rusia.html">Ruisa</a></li>
         <li><a href="Azerbaiyan.html">Azerbaiyán</a></li>
         <li><a href="bocas.html">**</a></li>
+        <li><a href="peruCorreia.html">Perú</a></li>    
         <li><a href="nosotros.html">Nosotros (Equipo)</a></li>
         </ul>
     </div>
 
 </body>
 </html>
+
