--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
         <li><a href="rusia.html">Ruisa</a></li>
         <li><a href="Azerbaiyan.html">Azerbaiyán</a></li>
-        <li><a href="bocas.html">**</a></li>
+        <li><a href="MichelleIndex.html">**</a></li>
         <li><a href="peruCorreia.html">Perú</a></li>    
         <li><a href="nosotros.html">Nosotros (Equipo)</a></li>
         </ul>
@@ -28,4 +28,5 @@
 
 </body>
 </html>
+
 
