--- a/nosotros.html
+++ b/nosotros.html
@@ -15,7 +15,10 @@
         <figure>
             <img src="https://en.meming.world/images/en/1/17/Willem_Dafoe_Looking_Up.jpg" alt="Sara Guerra">
         </figure>
-        <li>****</li>
+        <li>Michelle Granillo</li>
+        <figure>
+            <img src="https://wallpapercave.com/wp/wp6847828.jpg"
+        </figure>
         <li>****</li>
     </ul>
     <br>
@@ -23,5 +26,6 @@
   </div>
 </body>
 </html>
+
 
 
