--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
         <li><a href="rusia.html">Ruisa</a></li>
         <li><a href="Azerbaiyan.html">Azerbaiyán</a></li>
         <li><a href="MichelleIndex.html">**</a></li>
-        <li><a href="peruCorreia.html">Perú</a></li>    
-        <li><a href="nosotros.html">Nosotros (Equipo)</a></li>
+        <li><a href="peruCorreia.html">Perú</a></li>
         </ul>
+        <a href="nosotros.html">Nosotros (Equipo)</a>
     </div>
 
 </body>
 </html>
+
 
 
