--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
         <li><a href="rusia.html">Ruisa</a></li>
         <li><a href="Azerbaiyan.html">Azerbaiyán</a></li>
-        <li><a href="MichelleIndex.html">**</a></li>
+        <li><a href="MichelleIndex.html">Egipto</a></li>
         <li><a href="peruCorreia.html">Perú</a></li>
         </ul>
         <a href="nosotros.html">Nosotros (Equipo)</a>
@@ -28,6 +28,7 @@
 
 </body>
 </html>
+
 
 
 
