--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="card">
         <h3>Destinos</h3>
         <ul>
-        <li><a href="rusia.html">Ruisa</a></li>
+        <li><a href="rusia.html">Rusia</a></li>
         <li><a href="Azerbaiyan.html">Azerbaiyán</a></li>
         <li><a href="MichelleIndex.html">Egipto</a></li>
         <li><a href="peruCorreia.html">Perú</a></li>
@@ -28,6 +28,7 @@
 
 </body>
 </html>
+
 
 
 
